--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-simple-typewriter": "^5.0.1",
     "sass": "^1.77.8",
+    "simple-react-validator": "^1.6.2",
     "slick-carousel": "^1.8.1",
     "typewriter": "^9.2.0",
     "typewriter-effect": "^2.21.0"
