--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.1",
+    "@next/third-parties": "^14.2.5",
     "bootstrap": "^5.3.3",
     "next": "14.2.5",
     "react": "^18",
