--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.1",
     "@next/third-parties": "^14.2.5",
+    "@vercel/analytics": "^1.3.1",
     "bootstrap": "^5.3.3",
     "next": "14.2.5",
     "react": "^18",
